--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="lead-content">
             <h1>Anton Farmer</h1>
             <h2>Python Developer</h2>
-            <a href="" download="Anton_F_Resume_2023" class="btn-rounded-white">Download Resume</a>
+            <a href="https://github.com/lachesis17/portfolio/blob/main/images/Resume%20Github.pdf?raw=true" download="Anton_F_Resume" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
