--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p>
                         With over two year's commercial experience with Python and PyQt, I create portable desktop applications for the reporting, visualisation, statistical analysis and parameter derivation required for site investigations in offshore geotechnical engineering.
                         <br><br>
-                        I am self-taught, which has been a common theme throughout my personal and professional life. Travelling through most of my 20's, my unconvential path has given me a unique perspective for problem solving and software development, pulling on my innate strive for perfection and the knowledge that there is always room to improve. Supported by my insatiability for learning and my determination, I enjoy the challenge, frustration and 'eureka' moments of software development and the reward that come with delivering a program that the user can really use.
+                        I am self-taught, which has been a common theme throughout my personal and professional life. Travelling through most of my 20's, my unconvential path has given me a unique perspective for problem solving and software development, pulling on my innate strive for perfection and the knowledge that there is always room to improve. Supported by my insatiability for learning and my determination, I enjoy the challenge, frustration and 'eureka' moments of software development and the reward that comes with delivering a program that the user can really use.
                     </p>
                 </div>
             </div>
