--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                             A PyQt GUI made for the viewing, editing and processing of AGS4 data format
                             <li style="font-size:12px">Uses subclassed QAbstractTableModel and QTableView, promoted in QtDesigner</li>
                             <li style="font-size:12px">Parses AGS4 data into Pandas dataframes</li>
-                            <li style="font-size:12px">TableViews function like an excel spreadsheet, to view and edit dataframes</li>
-                            <li style="font-size:12px">Qt.CustomContextMenus to manipulate the data/structure, with edits applied to the original dataset</li>
+                            <li style="font-size:12px">TableViews function like an excel spreadsheet</li>
+                            <li style="font-size:12px">Qt.CustomContextMenus to manipulate data</li>
                             <li style="font-size:12px">Uses SQL queries with pyodbc and SQLAlchemy to "match" sample data to a geotechnical access database</li>
                             <li style="font-size:12px">Counts results per test type, distinguishing between onshore and offshore results</li>
                             <li style="font-size:12px"><a href="https://pypi.org/project/python-ags4/">Checks the file for errors using the AGS standard dictionaries with python-ags4</a></li>
@@ -161,11 +161,11 @@
                     <div class="project-info">
                         <h3>AvgCPT</h3>
                         <p>
-                            Another PyQt GUI that gives averages and statistical analysis on Cone Penetration Testing
-                            <li style="font-size:12px">Utilises object orientated programming to perform statistical analysis using linear regression with scipy and numpy, to remove outliers on both dependant and independant models</li>
+                            A PyQt GUI giving averages and statistical analysis on Cone Penetration Testing
+                            <li style="font-size:12px">Utilises object orientated programming to perform statistical analysis via linear regression with scipy & numpy to remove outliers on dependant and independant models</li>
                             <li style="font-size:12px">Creates PDF reports with matplotlib, with profile lines for design from the statistical analysis class</li>
-                            <li style="font-size:12px">Gives average values for a selected depths and parameters within a 1 metre range, as long as the range is in the same geological layer</li>
-                            <li style="font-size:12px">Uses pyqtgraph to plot individual CPT parameters and edits them with a pg.InfiniteLine</li>
+                            <li style="font-size:12px">Average values for selected depths and parameters within a geological layer with 1m range</li>
+                            <li style="font-size:12px">Uses pyqtgraph to plot CPT parameters and trims them with a pg.InfiniteLine</li>
                             <li style="font-size:12px">Has dark mode, because it's fancy</li>
                         </p>
                         <a href="https://github.com/lachesis17/AvgCPT">View Project</a>
