--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="project-info">
                         <h3>AGS GUI</h3>
                         <p>
-                            A PyQt GUI made for the viewing, editing and processing of AGS4 data format
+                            A PyQt GUI for viewing, editing and processing of AGS4 data format
                             <li style="font-size:12px">Uses subclassed QAbstractTableModel and QTableView, promoted in QtDesigner</li>
                             <li style="font-size:12px">Parses AGS4 data into Pandas dataframes</li>
                             <li style="font-size:12px">TableViews function like an excel spreadsheet</li>
