--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
                     <div class="project-info">
                         <h3>AGS GUI</h3>
                         <p>
-                            A PyQt GUI for viewing, editing and processing of AGS4 data format
+                            A PyQt GUI for viewing and editing of AGS4 data format
                             <li style="font-size:12px">Uses subclassed QAbstractTableModel and QTableView, promoted in QtDesigner</li>
                             <li style="font-size:12px">Parses AGS4 data into Pandas dataframes</li>
                             <li style="font-size:12px">TableViews function like an excel spreadsheet</li>
                             <li style="font-size:12px">Qt.CustomContextMenus to manipulate data</li>
                             <li style="font-size:12px">Uses SQL queries with pyodbc and SQLAlchemy to "match" sample data to a geotechnical access database</li>
-                            <li style="font-size:12px">Counts results per test type, distinguishing between onshore and offshore results</li>
+                            <li style="font-size:12px">Counts results per test type, splitting onshore and offshore results</li>
                             <li style="font-size:12px"><a href="https://pypi.org/project/python-ags4/">Checks the file for errors using the AGS standard dictionaries with python-ags4</a></li>
                         </p>
                         <a href="https://github.com/lachesis17/AGS-GUI">View Project</a>
