--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <li style="font-size:12px">Qt.CustomContextMenus to manipulate data</li>
                             <li style="font-size:12px">Uses SQL queries with pyodbc and SQLAlchemy to "match" sample data to a geotechnical access database</li>
                             <li style="font-size:12px">Counts results per test type, splitting onshore and offshore results</li>
-                            <li style="font-size:12px"><a href="https://pypi.org/project/python-ags4/">Checks the file for errors using the AGS standard dictionaries with python-ags4</a></li>
+                            <li style="font-size:12px"><a href="https://pypi.org/project/python-ags4/">Checks the file for errors using the AGS standard with python-ags4</a></li>
                         </p>
                         <a href="https://github.com/lachesis17/AGS-GUI">View Project</a>
                     </div>
