--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             A PyQt GUI giving averages and statistical analysis on Cone Penetration Testing
                             <li style="font-size:12px">Utilises object orientated programming to perform statistical analysis via linear regression with scipy & numpy to remove outliers on dependant and independant models</li>
                             <li style="font-size:12px">Creates PDF reports with matplotlib, with profile lines for design from the statistical analysis class</li>
-                            <li style="font-size:12px">Average values for selected depths and parameters within a geological layer with 1m range</li>
+                            <li style="font-size:12px">Average values for selected depths and parameters within a geological layer</li>
                             <li style="font-size:12px">Uses pyqtgraph to plot CPT parameters and trims them with a pg.InfiniteLine</li>
                             <li style="font-size:12px">Has dark mode, because it's fancy</li>
                         </p>
