--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        With over two year's commercial experience with Python and PyQt, I create portable desktop applications for the reporting, visualisation, statistical analysis and parameter derivation required for site investigations in offshore geotechnical engineering.
+                        With over two years commercial experience with Python and PyQt, I create portable desktop applications for the reporting, visualisation, statistical analysis and parameter derivation required for site investigations in offshore geotechnical engineering.
                         <br><br>
-                        I am self-taught, which has been a common theme throughout my personal and professional life. Travelling through most of my 20's, my unconvential path has given me a unique perspective for problem solving and software development, pulling on my innate strive for perfection and the knowledge that there is always room to improve. Supported by my insatiability for learning and my determination, I enjoy the challenge, frustration and 'eureka' moments of software development and the reward that comes with delivering a program that the user can really use.
+                        I am self-taught, which has been a common theme throughout my personal and professional life. Travelling through most of my twenties, my unconventional path has given me a unique perspective for problem solving and software development, pulling on my innate strive for perfection and the knowledge that there is always room to improve. Supported by my insatiability for learning and my determination, I enjoy the challenge, frustration and 'eureka' moments of software development and the reward that comes with delivering a program that the user can really use.
                     </p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <h3>Geoquip Marine</h3>
                 <h4>Junior Data Engineer</h4>
                 <p>
-                    In my current role as Junior Data Engingeer in geotechnical engineering, I develop, maintain and test portable desktop applications built with Python, PyQt / Pyside and QtDesigner, as well as other in-house tools utilising VBA, SQL and Excel. I also provide data manipulation, statistical analysis and parameter derivation using pandas and numpy, with data visualisations and data deliverables for project reporting.
+                    In my current role as Junior Data Engineer in geotechnical engineering, I develop, maintain and test portable desktop applications built with Python, PyQt / Pyside and QtDesigner, as well as other in-house tools utilising VBA, SQL and Excel. I also provide data manipulation, statistical analysis and parameter derivation using pandas and numpy, with data visualisations and data deliverables for project reporting.
                     <br><br>
                     My job duties include:
                     <br>
@@ -107,15 +107,15 @@
                 <h3>Travel</h3>
                 <h4>Chef</h4>
                 <p>
-                    For several years I travelled through New Zealand, Australia and Canada, working up to Sous Chef in hotels and fine dining restaurants. During lockdown in 2020, I realised it was time for a change and started self-learning programming. 
+                    For several years, I travelled through New Zealand, Australia and Canada, working up to Sous Chef in hotels and fine dining restaurants. During lockdown in 2020, I realised it was time for a change and started self-learning programming. 
                     <br><br>
-                    Hopsitality provided unexpected transferable skills to other industries:
+                    Hospitality provided unexpected transferable skills to other industries:
                     <br>
                     <ul>
                     <li style="font-size:12px">Teamwork and understanding the importance of collaboration</li>
                     <li style="font-size:12px">Work ethic and the drive to push past personal boundaries for delayed gratification</li>
                     <li style="font-size:12px">Communication and the significance of each team member having a voice to be heard</li>
-                    <li style="font-size:12px">Working under pressure and time restraints to meet deadlines, being goal-orientated</li>
+                    <li style="font-size:12px">Working under pressure and time restraints to meet deadlines, being goal-oriented</li>
                     <li style="font-size:12px">Learning quickly, and learning often</li>
                     <li style="font-size:12px">Organisation to prevent and prepare for the unexpected</li>
                     </ul>
@@ -162,7 +162,7 @@
                         <h3>AvgCPT</h3>
                         <p>
                             A PyQt GUI giving averages and statistical analysis on Cone Penetration Testing
-                            <li style="font-size:12px">Utilises object orientated programming to perform statistical analysis via linear regression with scipy & numpy to remove outliers on dependant and independant models</li>
+                            <li style="font-size:12px">Utilises object-orientated programming to perform statistical analysis via linear regression with scipy & numpy to remove outliers on dependent and independent models</li>
                             <li style="font-size:12px">Creates PDF reports with matplotlib, with profile lines for design from the statistical analysis class</li>
                             <li style="font-size:12px">Average values for selected depths and parameters within a geological layer</li>
                             <li style="font-size:12px">Uses pyqtgraph to plot CPT parameters and trims them with a pg.InfiniteLine</li>
@@ -184,8 +184,8 @@
                             I contribute to and maintain private repositories, and pursue personal goals using Python
                             <li style="font-size:12px">Using PyMuPDF and PySide, derive parameters and sample quality of Oedometer test results</li>
                             <li style="font-size:12px">Generate QR codes for samples using PyQt, Crypto, Pillow and JSON</li>
-                            <li style="font-size:12px">Export SQL databases to excel using queries with pyodbc, SQLAlchemy and Pandas, much faster than the native application exports</li>
-                            <li style="font-size:12px">My current passion project is learning to develop a game using PyGame, being an opportunity to improve my object orientated programming</li>
+                            <li style="font-size:12px">Export SQL databases to Excel using queries with pyodbc, SQLAlchemy and Pandas, much faster than the native application's exports</li>
+                            <li style="font-size:12px">My current passion project is learning to develop a game using PyGame, being an opportunity to improve my object-orientated programming</li>
                             <li style="font-size:12px">I'm currently learning C++ to use my skills and experience with PyQt to transfer to the Qt framework</li>
                         </p>
                     </div>
