--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <p>
                         With over two years commercial experience with Python and PyQt, I create portable desktop applications for the reporting, visualisation, statistical analysis and parameter derivation required for site investigations in offshore geotechnical engineering.
                         <br><br>
-                        I am self-taught, which has been a common theme throughout my personal and professional life. Travelling through most of my twenties, my unconventional path has given me a unique perspective for problem solving, pulling on my innate strive for perfection and the knowledge that there is always room to improve. Supported by my curiosity and determination, I enjoy the challenge and reward of software development, encouraging both continuous learning and creativity.
+                        Travelling through most of my twenties, my unconventional path has given me a unique perspective for problem solving, pulling on my innate strive for perfection and the knowledge that there is always room to improve. Supported by my curiosity and determination, I enjoy the challenge and reward of software development, encouraging both continuous learning and creativity.
                     </p>
                 </div>
             </div>
