--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <ul>
                         <li>
                             <div id="contact-form">
-                                <form method="POST" action="mailto:antonleighf@gmail.com">
+                                <form method="POST" action="https://mailto:antonleighf@gmail.com">
                                     <button type="submit" style="font-size:12px;height:25px;">Send me a message</button>
                                 </form>
                             </div>
