--- a/index.html
+++ b/index.html
@@ -198,23 +198,28 @@
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Languages & Frameworks</h2>
         <ul>
             <li>Python</li>
+            <li>Qt</li>
             <li>PyQt</li>
             <li>PySide</li>
             <li>QtDesigner</li>
-            <li>Qt</li>
             <li>QtCharts</li>
             <li>PyQtGraph</li>
             <li>Pandas</li>
             <li>Numpy</li>
+            <li>maplotlib</li>
+            <li>C++</li>
+            <li>JUCE</li>
+            <li>CMake</li>
             <li>scipy</li>
             <li>scikit-learn</li>
-            <li>maplotlib</li>
             <li>Git</li>
             <li>GitHub</li>
             <li>Django</li>
+            <li>Flask</li>
+            <li>REST APIs</li>
             <li>PostgreSQL</li>
             <li>Altair/Vega</li>
             <li>SQL</li>
@@ -232,8 +237,9 @@
             <li>Photoshop</li>
             <li>Lightroom</li>
             <li>Davinci Resolve</li>
+            <li>OBS Studio</li>
             <li>Reason</li>
-            <li>C++ (coming soon...)</li>
+            <li>Reaper</li>
         </ul>
     </div>
     <!-- End #skills -->
