--- a/index.html
+++ b/index.html
@@ -201,18 +201,18 @@
         <h2 class="heading">Languages & Frameworks</h2>
         <ul>
             <li>Python</li>
-            <li>Qt</li>
             <li>PyQt</li>
             <li>PySide</li>
             <li>QtDesigner</li>
-            <li>QtCharts</li>
-            <li>PyQtGraph</li>
             <li>Pandas</li>
-            <li>Numpy</li>
-            <li>maplotlib</li>
+            <li>numpy</li>
             <li>C++</li>
+            <li>Qt</li>
             <li>JUCE</li>
             <li>CMake</li>
+            <li>matplotlib</li>
+            <li>QtCharts</li>
+            <li>PyQtGraph</li>
             <li>scipy</li>
             <li>scikit-learn</li>
             <li>Git</li>
