--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             <li>Flask</li>
             <li>REST APIs</li>
             <li>PostgreSQL</li>
+	    <li>Postman</li>
             <li>Altair/Vega</li>
             <li>SQL</li>
             <li>SQLAlchemy</li>
