Update personal section

--- a/index.html
+++ b/index.html
@@ -175,18 +175,18 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/final.gif" width="300" height="300"/>
+                        <img src="images/sword_eq.gif" width="300" height="300"/>
                     </div>
 
                     <div class="project-info">
                         <h3>Collaborative and Personal Projects</h3>
                         <p>
                             I contribute to and maintain private repositories, and pursue personal goals using Python
-                            <li style="font-size:12px">Using PyMuPDF and PySide, derive parameters and sample quality of Oedometer test results</li>
-                            <li style="font-size:12px">Generate QR codes for samples using PyQt, Crypto, Pillow and JSON</li>
-                            <li style="font-size:12px">Export SQL databases to Excel using queries with pyodbc, SQLAlchemy and Pandas, much faster than the native application's exports</li>
-                            <li style="font-size:12px">My current passion project is learning to develop a game using PyGame, being an opportunity to improve my object-orientated programming</li>
-                            <li style="font-size:12px">I'm currently learning C++ to use my skills and experience with PyQt to transfer to the Qt framework</li>
+                            <li style="font-size:12px">My current passion project is developing audio VST plugins using C++ and JUCE</li>
+                            <li style="font-size:12px">Audio digital signal processing relies heavily on real-time processing, while updating the GUI in a seperate thread</li>
+                            <li style="font-size:12px">I'm also learning to develop a game using PyGame, using my own music</li>
+                            <li style="font-size:12px">Across multiple private repositories, I use software engineering, data visualisation and statistical analysis to improve on current practices</li>
+                            <li style="font-size:12px">I'm also using C++ to transfer my skills and experience with PyQt to the Qt framework</li>
                         </p>
                     </div>
 
@@ -221,7 +221,7 @@
             <li>Flask</li>
             <li>REST APIs</li>
             <li>PostgreSQL</li>
-	    <li>Postman</li>
+	        <li>Postman</li>
             <li>Altair/Vega</li>
             <li>SQL</li>
             <li>SQLAlchemy</li>
