--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="project-info">
                         <h3>Collaborative and Personal Projects</h3>
                         <p>
-                            I contribute to and maintain private repositories, and pursue personal goals using Python
+                            I contribute to and maintain private repositories, while pursuing personal goals with Python and C++
                             <li style="font-size:12px">My current passion project is developing audio VST plugins using C++ and JUCE</li>
                             <li style="font-size:12px">Audio digital signal processing relies heavily on real-time processing, while updating the GUI in a seperate thread</li>
                             <li style="font-size:12px">I'm also learning to develop a game using PyGame, using my own music</li>
