--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
                         <h3>Collaborative and Personal Projects</h3>
                         <p>
                             I contribute to and maintain private repositories, while pursuing personal goals with Python and C++
-                            <li style="font-size:12px">My current passion project is developing audio VST plugins using C++ and JUCE</li>
-                            <li style="font-size:12px">Audio digital signal processing relies heavily on real-time processing, while updating the GUI in a seperate thread</li>
+                            <li style="font-size:12px">My current passion project is developing <a href="https://github.com/lachesis17/EQ-Plugin">audio VST plugins using C++ and JUCE</a></li></li>
+                            <li style="font-size:12px">Digital signal processing (DSP) for audio using real-time processing to handle buffers, while updating the GUI in a seperate thread</li>
                             <li style="font-size:12px">I'm also learning to develop a game using PyGame, using my own music</li>
-                            <li style="font-size:12px">Across multiple private repositories, I use software engineering, data visualisation and statistical analysis to improve on current practices</li>
-                            <li style="font-size:12px">I'm also using C++ to transfer my skills and experience with PyQt to the Qt framework</li>
+                            <li style="font-size:12px">Across multiple private repositories, I use GUIs, data visualisation and statistical analysis to produce logs and parameters for project reporting</li>
+                            <li style="font-size:12px">I'm also using C++ to transfer my skills and experience with PyQt to the Qt framework (I love making desktop GUIs 🖥)</li>
                         </p>
                     </div>
 
