--- a/index.html
+++ b/index.html
@@ -130,6 +130,25 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/sword_eq.gif" width="300" height="300"/>
+                    </div>
+
+                    <div class="project-info">
+                        <h3>Collaborative and Personal Projects</h3>
+                        <p>
+                            I contribute to and maintain private repositories, while pursuing personal goals with Python and C++
+                            <li style="font-size:12px">My current passion project is developing <a href="https://github.com/lachesis17/EQ-Plugin">audio VST plugins using C++ and JUCE</a></li></li>
+                            <li style="font-size:12px">Digital signal processing (DSP) for audio using real-time processing to handle buffers, while updating the GUI in a seperate thread</li>
+                            <li style="font-size:12px">I'm also learning to develop a game using PyGame, using my own music</li>
+                            <li style="font-size:12px">Across multiple private repositories, I use GUIs, data visualisation and statistical analysis to produce logs and parameters for project reporting</li>
+                            <li style="font-size:12px">I'm also using C++ to transfer my skills and experience with PyQt to the Qt framework<br>(I love making desktop GUIs 🖥)</li>
+                        </p>
+                    </div>
+                </div>
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/agsgif.gif" width="300" height="300"/>
@@ -149,7 +168,6 @@
                         </p>
                         <a href="https://github.com/lachesis17/AGS-GUI">View Project</a>
                     </div>
-
                 </div>
 
 
@@ -170,27 +188,8 @@
                         </p>
                         <a href="https://github.com/lachesis17/AvgCPT">View Project</a>
                     </div>
-
                 </div>
 
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/sword_eq.gif" width="300" height="300"/>
-                    </div>
-
-                    <div class="project-info">
-                        <h3>Collaborative and Personal Projects</h3>
-                        <p>
-                            I contribute to and maintain private repositories, while pursuing personal goals with Python and C++
-                            <li style="font-size:12px">My current passion project is developing <a href="https://github.com/lachesis17/EQ-Plugin">audio VST plugins using C++ and JUCE</a></li></li>
-                            <li style="font-size:12px">Digital signal processing (DSP) for audio using real-time processing to handle buffers, while updating the GUI in a seperate thread</li>
-                            <li style="font-size:12px">I'm also learning to develop a game using PyGame, using my own music</li>
-                            <li style="font-size:12px">Across multiple private repositories, I use GUIs, data visualisation and statistical analysis to produce logs and parameters for project reporting</li>
-                            <li style="font-size:12px">I'm also using C++ to transfer my skills and experience with PyQt to the Qt framework (I love making desktop GUIs 🖥)</li>
-                        </p>
-                    </div>
-
-                </div>
                 <!-- End .project -->
             </div>
         </div>
