--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Anton Farmer</h1>
-            <h2>Junior Python Developer</h2>
+            <h2>Python & C++ Developer</h2>
             <a href="https://github.com/lachesis17/portfolio/blob/main/images/Resume%20Github.pdf?raw=true" download="Anton_F_Resume" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
