--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="project-info">
-                        <h3>Collaborative and Personal Projects</h3>
+                        <h3>Personal Projects</h3>
                         <p>
                             I contribute to and maintain private repositories, while pursuing personal goals with Python and C++
                             <li style="font-size:12px">My current passion project is developing <a href="https://github.com/lachesis17/EQ-Plugin">audio VST plugins using C++ and JUCE</a></li></li>
