--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/sword_eq.gif" width="300" height="300"/>
+                        <a href="https://github.com/lachesis17/EQ-Plugin"><img src="images/sword_eq.gif" href="" width="300" height="300"/></a>
                     </div>
 
                     <div class="project-info">
@@ -151,7 +151,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/agsgif.gif" width="300" height="300"/>
+                        <a href="https://github.com/lachesis17/AGS-GUI"><img src="images/agsgif.gif" width="300" height="300"/></a>
                     </div>
 
                     <div class="project-info">
@@ -173,7 +173,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/cptgif.gif" width="300" height="300"/>
+                        <a href="https://github.com/lachesis17/AvgCPT"><img src="images/cptgif.gif" width="300" height="300"/></a>
                     </div>
 
                     <div class="project-info">
