--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <a href="https://github.com/lachesis17/EQ-Plugin"><img src="images/sword_eq.gif" href="" width="300" height="300"/></a>
+                        <a href="https://github.com/lachesis17/EQ-Plugin"><img src="images/sword_eq_m.gif" href="" width="300" height="300"/></a>
                     </div>
 
                     <div class="project-info">
