--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <h3>Personal Projects</h3>
                         <p>
                             I contribute to and maintain private repositories, while pursuing personal goals with Python and C++
-                            <li style="font-size:12px">My current passion project is developing audio VST plugins using C++ and JUCE<br><a href="https://github.com/lachesis17/EQ-Plugin">Equalizer</a> - <a href="https://github.com/lachesis17/Delay-Plugin">Tape Delay</a></li></li>
+                            <li style="font-size:12px">My current passion is developing audio VST plugins using C++ and JUCE<br><a href="https://github.com/lachesis17/EQ-Plugin">Equalizer</a> - <a href="https://github.com/lachesis17/Delay-Plugin">Tape Delay</a></li></li>
                             <li style="font-size:12px">Digital signal processing (DSP) for audio using real-time processing to handle buffers, while updating the GUI in a seperate thread</li>
                             <li style="font-size:12px">I'm also learning to develop a game using PyGame, using my own music</li>
                             <li style="font-size:12px">Across multiple private repositories, I use GUIs, data visualisation and statistical analysis to produce logs and parameters for project reporting</li>
