--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        With over two years commercial experience with Python and PyQt, I create portable desktop applications for the reporting, visualisation, statistical analysis and parameter derivation required for site investigations in offshore geotechnical engineering.
+                        With three years commercial experience with Python and PyQt, I develop desktop applications for visualisation, statistical analysis and parameter derivation used in offshore geotechnical engineering reporting. In my free time I develop DSP audio plugins using C++, JUCE and CMake.
                         <br><br>
-                        Travelling through most of my twenties, my unconventional path has given me a unique perspective for problem solving, pulling on my innate strive for perfection and the knowledge that there is always room to improve. Supported by my curiosity and determination, I enjoy the challenge and reward of software development, encouraging both continuous learning and creativity.
+                        Travelling through most of my twenties, my unconventional path has given me a unique perspective for problem solving. I love making desktop GUIs, using the challenge an outlet for continuous learning and creativity.
                     </p>
                 </div>
             </div>
