--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        With three years commercial experience with Python and PyQt, I develop desktop applications for visualisation, statistical analysis and parameter derivation used in offshore geotechnical engineering reporting. In my free time I develop DSP audio plugins using C++, JUCE and CMake which merge my two biggest passions: programming and music.
+                        With three years commercial experience with Python and PyQt, I develop desktop applications for data visualisation, statistical analysis and parameter derivation used in offshore geotechnical engineering reports. In my free time I develop DSP audio plugins using C++, JUCE and CMake which merge my two biggest passions: programming and music.
                         <br><br>
-                        Travelling through most of my twenties, my unconventional path has given me a unique perspective for problem solving. I love making desktop GUIs, using the challenge an outlet for continuous learning and creativity.
+                        Travelling through most of my twenties, my unconventional path has given me a unique perspective for problem solving. I love making desktop GUIs, using the challenge as an outlet for continuous learning and creativity.
                     </p>
                 </div>
             </div>
