--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <div class="project-info">
                         <h3>Personal Projects</h3>
                         <p>
-                            I contribute to and maintain private repositories, while pursuing personal goals with Python and C++https://github.com/lachesis17/Chorus-Plugin/tree/main
+                            I contribute to and maintain private repositories, while pursuing personal goals with Python and C++
                             <li style="font-size:12px">My current passion is developing audio VST plugins using C++ and JUCE<br><a href="https://github.com/lachesis17/EQ-Plugin">Equalizer</a> - <a href="https://github.com/lachesis17/Delay-Plugin">Tape Delay</a> - <a href="https://github.com/lachesis17/Chorus-Plugin">Chorus</a></li></li>
                             <li style="font-size:12px">Digital signal processing (DSP) for audio using real-time processing to handle buffers, while updating the GUI in a seperate thread</li>
                             <li style="font-size:12px">I'm also learning to develop a game using PyGame, using my own music</li>
