--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <div id="experience-timeline">
             <div data-date="March 2021 – Current">
                 <h3>Geoquip Marine</h3>
-                <h4>Junior Data Engineer</h4>
+                <h4>Software Engineer</h4>
                 <p>
-                    In my current role as Junior Data Engineer in geotechnical engineering, I develop, maintain and test portable desktop applications built with Python, PyQt / Pyside and QtDesigner, as well as other in-house tools utilising VBA, SQL and Excel. I also provide data manipulation, statistical analysis and parameter derivation using pandas and numpy, with data visualisations and data deliverables for project reporting.
+                    In my current role as a Software Engineer in geotechnical engineering, I develop, maintain and test portable desktop applications built with Python, PyQt / Pyside and QtDesigner, as well as other in-house tools utilising VBA, SQL and Excel. I also provide data manipulation, statistical analysis and parameter derivation using pandas and numpy, with data visualisations and data deliverables for project reporting.
                     <br><br>
                     My job duties include:
                     <br>
