--- a/index.html
+++ b/index.html
@@ -133,6 +133,24 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <a href="https://github.com/lachesis17/Delay-ja-vu"><img src="images/delay.gif" href="" width="300" height="300"/></a>
+                    </div>
+
+                    <div class="project-info">
+                        <h3>Delay-ja-vu</h3>
+                        <p>
+                            Stereo Tape Delay VST Plugin with C++ and JUCE
+                            <li style="font-size:12px">Real-time processing, using the JUCE framework and a circular buffer to add a delayed <i>echo</i> effect to an incoming audio stream, perfect for guitar 🎸</li>
+                            <li style="font-size:12px">Stereo delay with independent delay times for right and left channels, from 0-2000 m/s</li>
+                            <li style="font-size:12px">Toggle stereo delay, low/high pass and chorus effects with toggle buttons</li>
+                            <li style="font-size:12px">Additional features planned including sync to BPM, ping-pong and reverse delay</li>
+                            <li style="font-size:12px">Multi-platform distribution. Compiles to:<br>Window standalone (.exe), VTS3 (.vst) Mac Audio Unit (.AU) and Pro Tools (.AAX)</li>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <a href="https://github.com/lachesis17/EQ-Plugin"><img src="images/sword_eq_m.gif" href="" width="300" height="300"/></a>
                     </div>
 
