add delay project link

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                             <li style="font-size:12px">Additional features planned including sync to BPM, ping-pong and reverse delay</li>
                             <li style="font-size:12px">Multi-platform distribution. Compiles to:<br>Window standalone (.exe), VTS3 (.vst) Mac Audio Unit (.AU) and Pro Tools (.AAX)</li>
                         </p>
+                        <a href="https://github.com/lachesis17/Delay-ja-vu">View Project</a>
                     </div>
                 </div>
 
