--- a/index.html
+++ b/index.html
@@ -92,14 +92,13 @@
                     My job duties include:
                     <br>
                     <ul>
-                    <li style="font-size:12px">Develop, maintain and test portable desktop applications built with Python / PyQt / PySide / QtDesigner, compiled for portable use with PyInstaller </li>
-                    <li style="font-size:12px">Develop/maintain in-house tools utilising VBA, SQL and Excel</li>
-                    <li style="font-size:12px">Data set manipulation, statistical analysis and parameter derivation using Pandas and Numpy</li>
-                    <li style="font-size:12px">Data visualisation with pyqtgraph, matplotlib, QtCharts, PowerBI, Altair / Vega / JavaScript</li>
+                    <li style="font-size:12px">Develop, maintain and test portable desktop applications built with Python / PyQt / PySide / QtDesigner, compiled for portable use with PyInstaller, as well as in-house tools using VBA, SQL and Excel</li>
+                    <li style="font-size:12px">Data set manipulation, statistical analysis and parameter derivation using Pandas and numpy</li>
+                    <li style="font-size:12px">Signal processing using filters with scipy, scikit-learn and numpy</li>
+                    <li style="font-size:12px">Data visualisation with pyqtgraph, matplotlib, QtCharts, plotly, PowerBI, JavaScript</li>
                     <li style="font-size:12px">Version control using Git/GitHub desktop and documentation</li>
-                    <li style="font-size:12px">Data deliverables for project reporting in formats including GIS, .ags, borehole logs</li>
-                    <li style="font-size:12px">Data management and QA/QC of offshore/onshore laboratory testing and scheduling</li>
-                    <li style="font-size:12px">Database frameworks using Django, PostgreSQL / SQLite3</li>
+                    <li style="font-size:12px">Data management and deliverables for projecting reporting, including geospatial GIS</li>
+                    <li style="font-size:12px">Database and API frameworks using Django / Flask, PostgreSQL / SQLite3</li>
                     </ul>
                 </p>
             </div>
